[metadata]
name = string_analyzer_gabrielrg
version = 0.0.1
author = gabrielrg
author_email = gbrll.rg@gmail.com
description = Packet to determine words similarities
long_description = file: README.md
long_description_content_type = text
url = https://github.com/gabrielrg/Take_StringAnalyzer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.2
